feat: integrate rotation system into NoFall
Subtle logic and structure refactoring, and code styling